# deepc

./: INSTALL.md  Makefile  clexer.cpp  clexer.h  codegen.cpp  codegen.h  compileargs.cpp  compileargs.h  compiler.cpp  compiler.h  cparser.cpp  cparser.h  deepc-all.pro  deepc.pro  deeptypes.h  fail.cpp  fail.h  lexer.h  main.cpp  meson.build  parser.h  parsetree.cpp  parsetree.h  preprocessor.cpp  preprocessor.h  programdb.cpp  programdb.h  sourcefile.cpp  sourcefile.fbs  sourcefile.h  sourcepos.h  storable.cpp  storable.h  storedobject.fbs  token.h
cparser/: Makefile  class_diagram.txt  clexer.h  cparser.pro  cparserlistener.cpp  cparserlistener.h  csyntaxtree.h  ctree.cpp  ctree.h
cparser/old/: cparserlistener.cpp
dcparsergen/: c_lexical.pgen  dcparsergen.pro  grammar.c  grammar.h  lexergen.c  main.c  parsergen.c  parsergen.h  util.c  util.h
deepc/: Makefile  deepc.pro  main.c  main.cpp  meson.build
deepcompiler/: cbtree.h  chain.h  sourcebag.cpp  sourcefile.h  sourcespan.cpp  sourcespan.h
deepcserv/: deepcserv.pro  lsp_spec.json  lspserver.cpp  lspserver.h  main.cpp  meson.build
goparser/: Makefile
jemalloc/: jemalloc.pro  mmap_example.c
libdeepcc/: Makefile  allsources.cpp  cbtree.h  codegen.cpp  compiler.cpp  compiler.h  cparser.h  ctree.h  dcdbfile.h  diff.cpp  diff.h  fail.cpp  libdeepcc.pro  meson.build  parsetree.cpp  parsetree.h  preprocessor.cpp  preprocessor.h  programdb.cpp  programdb.fbs  programdb.h  programdb.pb.cpp  programdb.pb.h  programdb.proto  programdb_generated.h  sourcebag.cpp  sourcebag.h  sourcediff.cpp  sourcediff.h  sourcefile.cpp  sourcefile.h  sourcemonitor.cpp  sourcepos.cpp  sourcepos.h  sourcespan.cpp  sourcespan.h  storable.cpp  storable.h  token.cpp
libdeepcc/libdeepcc_tests/: Makefile  cbtree_test.cpp  diff_test.cpp  libdeepcc_tests.pro  main.cpp
libdeepcc/tests/: Makefile  cbtree_test.cpp  diff_test.cpp
old/: Makefile  deepc-all.pro
old/dcparsergen/: Makefile  README.txt  grammar.h  lexergen.h  main.c  util.h
old/deepc/: Makefile  deepc.pro  main.cpp
old/libdeepcc/: allsources.h  cbtree.h  chain.h  clexer.h  ctree.cpp  diff.h  libdeepcc.pro  sourcediff.cpp  sourcediff.h  sourcefile.cpp  sourcefile.fbs  sourcefile.h  sourcemonitor.h
old/minideepc/: Makefile  deepc.cpp  findsym  minideepc
old/persmem/: Makefile  memsize.c  persmem.pro  persmem_internal.h  (+1 more)
parsergen/: deepc.grammar  deepc.lexical  deepc.syntax  grammar.c  grammar.h  main.c  parsergen.h
persmem/: Makefile  alloc.c  allocmap.c  buddybitmap.c  freelist.c  memsize.c  persmem.c  persmem.h  persmem.pro  persmem_internal.h  pool.c
src/: Makefile  codegen.cpp  compiler.cpp  compiler.h  datatype.c  datatype.h  dclexer.l  dclexerclass.cpp  dclexerclass.h  dcparser.y  deepc.c  deepc.cpp  deepc.h  deeplib.cpp  deeplib.h  lexer.c  lexer.cpp  lib.c  parser.cpp  parser.h  parsetree.h  preproc.c  preproc.cpp  preproc.h  sharestr.c  symtable.c  symtable.cpp  symtable.h  value.h
tests/: hello.c  main.cpp  meson.build  tests.pro
(+40 files in other folders)
